2002-06-12  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* src/config.cpp: put inclusion of "../configure.h" at first
	postiion; its defines must be known before anything else,
	as from that will depend what is conditionally included from
	other headers.

2002-06-11  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Explicitely links to bonobo.

	* src/config.cpp: Fixed wrong menu indice 
	(menu didn't update when the text chat was shown/hidden). 
	Thanks to tuxer.

	* src/gnomemeeting.server: Changed OAFiid

	* src/ldap_window.cpp: The current ILS server is displayed 
	in the combo box when you switch from page to page in the notebook.

	* src/main_window.cpp: Changed OAFiid. Changed progressbar size.

	* src/menu.cpp: Fixed Zoom icon.
	
2002-06-10  Damien Sandras  <dsandras@seconix.com>

	* src/endpoint.cpp: Hide the progressbar when not needed.

	* src/gnomemeeting.cpp: Show the progressbar when needed.

	* src/main_window.cpp: Made the progressbar invisible by default.
	Code cleanups for popt. The progressbar is smaller.

	* src/urlhandler.cpp: Display message when searching for user on ILS.
	
2002-06-09  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Fixed small bug. Version is now 0.93.0.

	* src/callbacks.cpp, src/cleaner.h, src/common.h, src/config.cpp,
	src/connection.h, src/endpoint.cpp, src/endpoint.h, src/gatekeeper.cpp,
	src/gatekeeper.h, src/gdkvideoio.cpp, src/gdkvideoio.h, 
	src/gnomemeeting.h, src/ils.h, src/ldap_window.cpp, 
	src/main_window.cpp, src/main_window.h, src/menu.cpp, src/misc.cpp,
	src/misc.h, src/pref_window.cpp, src/toolbar.cpp, src/urlhandler.h,
	src/videograbber.h: Changed GM_RTP_Data to GmRtpData, GM_pref_window
	to GmPrefWindow, GM_Main_Window to GmMainWindow, GM_Chat_Window to
	GmChatWindow. (Julien Puydt aka Snark).
	
2002-06-09  Damien Sandras  <dsandras@seconix.com>

	* src/main_window.h: Added function to update the new progressbar
	that moves when we are calling somebody.
	