@@ -1,3 +1,8 @@
+2002-06-12  Damien Sandras  <dsandras@seconix.com>
+
+	* src/toolbar.cpp: Set the current URL as tooltip for the 
+	entry of the combo box.
+	
 2002-06-12  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* src/config.cpp: put inclusion of "../configure.h" at first
